posts can be viewed but not pretty

--- a/Parsetagram/Podfile
+++ b/Parsetagram/Podfile
@@ -7,6 +7,7 @@ target 'Parsetagram' do
 
   # Pods for Parsetagram
   pod 'Parse'
+  pod 'ParseUI'
   pod 'AFNetworking', '~> 3.0'
   pod 'MBProgressHUD'
 
